--- a/src/App/views/parts/head.view.html
+++ b/src/App/views/parts/head.view.html
@@ -4,4 +4,4 @@
 
 <script src="/assets/js/app.js"></script>
 
-<title><?= $titulo ?? "Procesador de Excels" ?></title>
+<title>{{ titulo | default('Procesador de Excels') }}</title>
