--- a/src/App/views/parts/head.view.html
+++ b/src/App/views/parts/head.view.html
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/assets/css/base.css">
+<link rel="stylesheet" href="/assets/css/not-found.css">
 
 <script src="/assets/js/app.js"></script>
 
