--- a/src/App/views/parts/header.view.html
+++ b/src/App/views/parts/header.view.html
@@ -1,3 +1,13 @@
 <header>
-        <h1>Sistema Para Procesar Archivos de Excel</h1>
+        <h1><a href="/">Sistema Para Procesar Archivos de Excel</a></h1>
+        <nav class="nav-procesador">
+                <ul>
+                        <li class="item-list">
+                                <a href="/">Procesar Archivos Excel</a>
+                        </li>
+                        <li class="item-list">
+                                <a href="/revisar-padron">Revisar Padron</a>
+                        </li>
+                </ul>
+        </nav>
 </header>
