--- a/src/App/views/parts/header.view.html
+++ b/src/App/views/parts/header.view.html
@@ -5,9 +5,9 @@
                         <li class="item-list">
                                 <h2><a href="/">Procesar Archivos Excel</a></h2>
                         </li>
-                        <li class="item-list">
+                        <!-- <li class="item-list">
                                 <h2><a href="/padron/procesar">Revisar Padron</a></h2>
-                        </li>
+                        </li> -->
                         <li class="item-list">
                                 <h2><a href="/padron/listar">Ver Padron de Agentes</a></h2>
                         </li>
